force-app/main/default/objects/Participant_Enrollment__c/Participant_Enrollment__c.object-meta.xml
<CustomObject>
    <description>Participant Profile</description>
    <label>Participant Enrollment</label>
    <nameField>
        <displayFormat>REFERRALID{00000}</displayFormat>
        <label>Participant Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>