force-app/main/default/objects/Participant_Enrollment__c/fields/Add_televisit_for_Initial_Visit__c.field-meta.xml
<CustomField>
    <fullName>Add_televisit_for_Initial_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add televisit for Initial Visit</label>
    <type>Checkbox</type>
</CustomField>