force-app/main/default/objects/Participant_Enrollment__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional_Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>