force-app/main/default/objects/Participant_Enrollment__c/fields/Atid__c.field-meta.xml
<CustomField>
    <fullName>Atid__c</fullName>
    <label>Attribution ID</label>
    <length>75</length>
    <type>Text</type>
</CustomField>