force-app/main/default/objects/Participant_Enrollment__c/fields/Birth_Month__c.field-meta.xml
<CustomField>
    <fullName>Birth_Month__c</fullName>
    <label>Birth Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>