force-app/main/default/objects/Participant_Enrollment__c/fields/Chatbot_optout__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_optout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chatbot optout</label>
    <type>Checkbox</type>
</CustomField>