force-app/main/default/objects/Participant_Enrollment__c/fields/Comorbidities__c.field-meta.xml
<CustomField>
    <fullName>Comorbidities__c</fullName>
    <label>Comorbidities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>