force-app/main/default/objects/Participant_Enrollment__c/fields/Consulted__c.field-meta.xml
<CustomField>
    <fullName>Consulted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the Potential Participant been consulted on the clinical trial?</inlineHelpText>
    <label>Consulted</label>

    <type>Checkbox</type>
</CustomField>