force-app/main/default/objects/Participant_Enrollment__c/fields/Consulted_Date__c.field-meta.xml
<CustomField>
    <fullName>Consulted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when the Potential Participant was consulted</inlineHelpText>
    <label>Consulted Date</label>
    <type>Date</type>
</CustomField>