force-app/main/default/objects/Participant_Enrollment__c/fields/Contacted__c.field-meta.xml
<CustomField>
    <fullName>Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has contact been made with the Potential Participant?</inlineHelpText>
    <label>Contacted</label>

    <type>Checkbox</type>
</CustomField>