force-app/main/default/objects/Participant_Enrollment__c/fields/Contacted_Date__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when contact has been made with the Potential Participant</inlineHelpText>
    <label>Contacted Date</label>

    <type>Date</type>
</CustomField>