force-app/main/default/objects/Participant_Enrollment__c/fields/Created_Date_RPtoPI__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_RPtoPI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created Date RPtoPI</label>
    <type>DateTime</type>
</CustomField>