force-app/main/default/objects/Participant_Enrollment__c/fields/DataControllerOrg__c.field-meta.xml
<CustomField>
    <fullName>DataControllerOrg__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DataControllerOrg</label>
    <length>50</length>
    <type>Text</type>
</CustomField>