force-app/main/default/objects/Participant_Enrollment__c/fields/Days_After_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Days_After_Enrolled__c</fullName>
    <formula>TODAY()  -  Enrolled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days After Enrolled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>