force-app/main/default/objects/Participant_Enrollment__c/fields/Days_After_Referred__c.field-meta.xml
<CustomField>
    <fullName>Days_After_Referred__c</fullName>
    <formula>TODAY() - Referred_Date__c</formula>
    <label>Days After Referred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>