force-app/main/default/objects/Participant_Enrollment__c/fields/Days_Since_Last_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Status_Change__c</fullName>
    <description>Number of days since &quot;Participant Status Last Changed Date&quot; has been updated.</description>
    <formula>FLOOR(NOW() - Participant_Status_Last_Changed_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Status Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>