force-app/main/default/objects/Participant_Enrollment__c/fields/Delegate_Consent__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delegate Consent</label>
    <type>Checkbox</type>
</CustomField>