force-app/main/default/objects/Participant_Enrollment__c/fields/Discussion_Documented_Date__c.field-meta.xml
<CustomField>
    <fullName>Discussion_Documented_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discussion Documented Date</label>
    <type>Date</type>
</CustomField>