force-app/main/default/objects/Participant_Enrollment__c/fields/DocumentCollectionId__c.field-meta.xml
<CustomField>
    <fullName>DocumentCollectionId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Collection Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>