force-app/main/default/objects/Participant_Enrollment__c/fields/DocumentCollectionName__c.field-meta.xml
<CustomField>
    <fullName>DocumentCollectionName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Collection Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>