force-app/main/default/objects/Participant_Enrollment__c/fields/DocumentCollectionTitle__c.field-meta.xml
<CustomField>
    <fullName>DocumentCollectionTitle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Collection Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>