force-app/main/default/objects/Participant_Enrollment__c/fields/ECOA_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>ECOA_Retry_Count__c</fullName>
    <label>ECOA Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>