force-app/main/default/objects/Participant_Enrollment__c/fields/ECOA_Retry_Disabled__c.field-meta.xml
<CustomField>
    <fullName>ECOA_Retry_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ECOARetryDisabled</label>
    <type>Checkbox</type>
</CustomField>