force-app/main/default/objects/Participant_Enrollment__c/fields/EConsent_SubjectId__c.field-meta.xml
<CustomField>
    <fullName>EConsent_SubjectId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EConsent_SubjectId</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>