force-app/main/default/objects/Participant_Enrollment__c/fields/Eligible__c.field-meta.xml
<CustomField>
    <fullName>Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Opportunity for PI to ask more questions than was done in the Pre-eligilibity screening to confirm Potential Participant eligibility in a clinical trial</inlineHelpText>
    <label>Eligible</label>

    <type>Checkbox</type>
</CustomField>