force-app/main/default/objects/Participant_Enrollment__c/fields/Eligible_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date Potential Participant went through Eligible questions with PI</inlineHelpText>
    <label>Eligible Date</label>
    <type>Date</type>
</CustomField>