force-app/main/default/objects/Participant_Enrollment__c/fields/Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did the Potential Participant get enrolled into the Clinical Trial</inlineHelpText>
    <label>Enrolled</label>
    <type>Checkbox</type>
</CustomField>