force-app/main/default/objects/Participant_Enrollment__c/fields/Enrolled_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date enrollment completed</inlineHelpText>
    <label>Enrolled Date</label>

    <type>Date</type>
</CustomField>