force-app/main/default/objects/Participant_Enrollment__c/fields/Enrolled_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_DateTime__c</fullName>
    <label>Enrolled DateTime</label>
    <summarizedField>Participant_Enrollment_Status_History__c.Date__c</summarizedField>
    <summaryFilterItems>
        <field>Participant_Enrollment_Status_History__c.Status__c</field>
        <operation>equals</operation>
        <value>Enrollment Success</value>
    </summaryFilterItems>
    <summaryForeignKey>Participant_Enrollment_Status_History__c.ParticipantEnrollment__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>