force-app/main/default/objects/Participant_Enrollment__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <formula>Study_ID__c + &quot;~&quot; + Study_Site__r.Study_Site_Number__c + &quot;~&quot; + Screening_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Key</label>
    <type>Text</type>
</CustomField>