force-app/main/default/objects/Participant_Enrollment__c/fields/External_Key_WF__c.field-meta.xml
<CustomField>
    <fullName>External_Key_WF__c</fullName>
    <externalId>true</externalId>
    <label>External_Key_WF</label>
    <length>225</length>
    <type>Text</type>
</CustomField>