force-app/main/default/objects/Participant_Enrollment__c/fields/Final_consent__c.field-meta.xml
<CustomField>
    <fullName>Final_consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Consent</label>
    <type>Checkbox</type>
</CustomField>