force-app/main/default/objects/Participant_Enrollment__c/fields/Final_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Consent_Date__c</fullName>
    <label>Final Consent Date</label>
    <type>Date</type>
</CustomField>