force-app/main/default/objects/Participant_Enrollment__c/fields/Have_you_Documented_the_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Have_you_Documented_the_Discussion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have you Documented the Discussion?</label>
    <type>Checkbox</type>
</CustomField>