force-app/main/default/objects/Participant_Enrollment__c/fields/HCP__c.field-meta.xml
<CustomField>
    <fullName>HCP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HCP</label>
    <referenceTo>HCP_Enrollment__c</referenceTo>
    <relationshipLabel>Participant Enrollments</relationshipLabel>
    <relationshipName>Participant_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>