force-app/main/default/objects/Participant_Enrollment__c/fields/HCP_Account__c.field-meta.xml
<CustomField>
    <fullName>HCP_Account__c</fullName>
    <description>For Workflow Emails</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HCP Account</label>
    <length>255</length>

    <type>Text</type>
</CustomField>