force-app/main/default/objects/Participant_Enrollment__c/fields/HCP_Contact__c.field-meta.xml
<CustomField>
    <fullName>HCP_Contact__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; HCP__r.HCP_Contact__c ,HCP__r.HCP_Contact__r.FirstName&amp;&quot; &quot;&amp;  HCP__r.HCP_Contact__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP Contact</label>

    <type>Text</type>
</CustomField>