force-app/main/default/objects/Participant_Enrollment__c/fields/HCP_Contact_HCPEnroll__c.field-meta.xml
<CustomField>
    <fullName>HCP_Contact_HCPEnroll__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Testing</description>
    <label>HCP Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participant Enrollments (HCP Contact)</relationshipLabel>
    <relationshipName>Participant_Enrollments2</relationshipName>

    <type>Lookup</type>
</CustomField>