force-app/main/default/objects/Participant_Enrollment__c/fields/HighRisk_Indicator__c.field-meta.xml
<CustomField>
    <fullName>HighRisk_Indicator__c</fullName>
    <label>HighRisk Indicator</label>
    <length>5</length>
    <type>Text</type>
</CustomField>