force-app/main/default/objects/Participant_Enrollment__c/fields/Human_Id__c.field-meta.xml
<CustomField>
    <fullName>Human_Id__c</fullName>
    <label>Human Id</label>
    <type>TextArea</type>
</CustomField>