force-app/main/default/objects/Participant_Enrollment__c/fields/Included_for_Referring__c.field-meta.xml
<CustomField>
    <fullName>Included_for_Referring__c</fullName>
    <label>Included for Referring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>