force-app/main/default/objects/Participant_Enrollment__c/fields/Informed_Consent__c.field-meta.xml
<CustomField>
    <fullName>Informed_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did the Potential Participant provide informed consent?</inlineHelpText>
    <label>Informed Consent</label>

    <type>Checkbox</type>
</CustomField>