force-app/main/default/objects/Participant_Enrollment__c/fields/Informed_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Informed_Consent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date Informed Consent was provided</inlineHelpText>
    <label>Informed Consent Date</label>

    <type>Date</type>
</CustomField>