force-app/main/default/objects/Participant_Enrollment__c/fields/Initial_visit_occurred_date__c.field-meta.xml
<CustomField>
    <fullName>Initial_visit_occurred_date__c</fullName>
    <label>Initial Visit Occurred Date</label>
    <type>Date</type>
</CustomField>