force-app/main/default/objects/Participant_Enrollment__c/fields/Initial_visit_occurred_flag__c.field-meta.xml
<CustomField>
    <fullName>Initial_visit_occurred_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Visit Occurred Flag</label>
    <type>Checkbox</type>
</CustomField>