force-app/main/default/objects/Participant_Enrollment__c/fields/Initial_visit_scheduled_date__c.field-meta.xml
<CustomField>
    <fullName>Initial_visit_scheduled_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Visit Scheduled Date</label>
    <type>Date</type>
</CustomField>