force-app/main/default/objects/Participant_Enrollment__c/fields/Initial_Visit_Scheduled_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Initial_Visit_Scheduled_DateTime__c</fullName>
    <label>Initial Visit Scheduled DateTime</label>
    <type>DateTime</type>
</CustomField>