force-app/main/default/objects/Participant_Enrollment__c/fields/Initial_visit_scheduled_time__c.field-meta.xml
<CustomField>
    <fullName>Initial_visit_scheduled_time__c</fullName>
    <label>Initial Visit Scheduled Time</label>
    <type>Time</type>
</CustomField>