force-app/main/default/objects/Participant_Enrollment__c/fields/Initial_Visit_Televisit_Created__c.field-meta.xml
<CustomField>
    <fullName>Initial_Visit_Televisit_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Visit Televisit Created</label>
    <type>Checkbox</type>
</CustomField>