force-app/main/default/objects/Participant_Enrollment__c/fields/Interested__c.field-meta.xml
<CustomField>
    <fullName>Interested__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the Potential Participant interested in participating in the clinical trial?</inlineHelpText>
    <label>Interested</label>

    <type>Checkbox</type>
</CustomField>