force-app/main/default/objects/Participant_Enrollment__c/fields/Interested_Date__c.field-meta.xml
<CustomField>
    <fullName>Interested_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when the Potential Participant identified interest</inlineHelpText>
    <label>Interested Date</label>

    <type>Date</type>
</CustomField>