force-app/main/default/objects/Participant_Enrollment__c/fields/Invited_To_PP_Date__c.field-meta.xml
<CustomField>
        <fullName>Invited_To_PP_Date__c</fullName>
        <label>Invited To PP Date</label>
        <type>DateTime</type>
</CustomField>