force-app/main/default/objects/Participant_Enrollment__c/fields/IQVIA_Contact_info_storage_consent__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Contact_info_storage_consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IQVIA Contact info storage consent</label>
    <type>Checkbox</type>
</CustomField>