force-app/main/default/objects/Participant_Enrollment__c/fields/IQVIA_Direct_Mail_Consent__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Direct_Mail_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IQVIA Direct Mail Consent</label>
    <type>Checkbox</type>
</CustomField>