force-app/main/default/objects/Participant_Enrollment__c/fields/IQVIA_Pre_recorded_Voice_Consent__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Pre_recorded_Voice_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IQVIA Pre-recorded Voice Consent</label>
    <type>Checkbox</type>
</CustomField>