force-app/main/default/objects/Participant_Enrollment__c/fields/Is_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Contact</label>
    <type>Checkbox</type>
</CustomField>