force-app/main/default/objects/Participant_Enrollment__c/fields/Is_Contact_welcome_Message_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Contact_welcome_Message_Sent__c</fullName>
    <formula>Participant_Contact__r.Welcome_Message_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Contact welcome Message Sent</label>
    <type>Checkbox</type>
</CustomField>