force-app/main/default/objects/Participant_Enrollment__c/fields/Is_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Is_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Successfully Contacted</label>
    <type>Checkbox</type>
</CustomField>