force-app/main/default/objects/Participant_Enrollment__c/fields/Is_Created_by_Bulk_Import__c.field-meta.xml
<CustomField>
	<fullName>Is_Created_by_Bulk_Import__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Is Created by Bulk Import</label>
	<type>Checkbox</type>
</CustomField>