force-app/main/default/objects/Participant_Enrollment__c/fields/Is_Delegate_Certify__c.field-meta.xml
<CustomField>
    <fullName>Is_Delegate_Certify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Delegate Certify</label>
    <type>Checkbox</type>
</CustomField>