force-app/main/default/objects/Participant_Enrollment__c/fields/Is_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Email</label>
    <type>Checkbox</type>
</CustomField>