force-app/main/default/objects/Participant_Enrollment__c/fields/Is_Participant_Adult__c.field-meta.xml
<CustomField>
    <fullName>Is_Participant_Adult__c</fullName>
    <formula>Participant__r.Adult__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Participant Adult</label>
    <type>Checkbox</type>
</CustomField>