force-app/main/default/objects/Participant_Enrollment__c/fields/Is_Participant_Contact_Opt_in_SMS__c.field-meta.xml
<CustomField>
    <fullName>Is_Participant_Contact_Opt_in_SMS__c</fullName>
    <formula>Participant_Contact__r.Participant_Opt_In_Status_SMS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Participant Contact Opt in SMS</label>
    <type>Checkbox</type>
</CustomField>