force-app/main/default/objects/Participant_Enrollment__c/fields/Is_Participant_DOB_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Participant_DOB_Valid__c</fullName>
        <formula>IF( ISBLANK(Participant__r.Birth_Month__c) &amp;&amp; CONTAINS(TEXT(Study_Site__r.Participant_DOB_format__c), &apos;MM&apos;) , false , 
IF( ISBLANK(Participant__r.Birth_Day__c) &amp;&amp; CONTAINS(TEXT(Study_Site__r.Participant_DOB_format__c), &apos;DD&apos;) , false , true ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Participant DOB Valid</label>
        <type>Checkbox</type>
</CustomField>