force-app/main/default/objects/Participant_Enrollment__c/fields/Is_Phone__c.field-meta.xml
<CustomField>
    <fullName>Is_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Phone</label>
    <type>Checkbox</type>
</CustomField>