force-app/main/default/objects/Participant_Enrollment__c/fields/Is_SMS__c.field-meta.xml
<CustomField>
    <fullName>Is_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SMS</label>
    <type>Checkbox</type>
</CustomField>