force-app/main/default/objects/Participant_Enrollment__c/fields/Is_Study_Site_SMS_Are_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Study_Site_SMS_Are_Available__c</fullName>
    <formula>Study_Site__r.SMS_Are_Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Study Site SMS Are Available</label>
    <type>Checkbox</type>
</CustomField>