force-app/main/default/objects/Participant_Enrollment__c/fields/Is_Virtual_Study_Site__c.field-meta.xml
<CustomField>
    <fullName>Is_Virtual_Study_Site__c</fullName>
    <formula>Study_Site__r.Is_Virtual_Study_Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Virtual Study Site</label>

    <type>Checkbox</type>
</CustomField>