force-app/main/default/objects/Participant_Enrollment__c/fields/isAuthorized__c.field-meta.xml
<CustomField>
    <fullName>isAuthorized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAuthorized</label>
    <type>Checkbox</type>
</CustomField>