force-app/main/default/objects/Participant_Enrollment__c/fields/IsAutoaccepted__c.field-meta.xml
<CustomField>
    <fullName>IsAutoaccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAutoaccepted</label>
    <type>Checkbox</type>
</CustomField>