force-app/main/default/objects/Participant_Enrollment__c/fields/isBulkUpdate__c.field-meta.xml
<CustomField>
    <fullName>isBulkUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBulkUpdate</label>
    <type>Checkbox</type>
</CustomField>