force-app/main/default/objects/Participant_Enrollment__c/fields/IsRequestDataFromSDH__c.field-meta.xml
<CustomField>
    <fullName>IsRequestDataFromSDH__c</fullName>
    <formula>AND
(
AND (
NOT (ISPICKVAL(Participant_Study_Enrollment__r.Status__c, &quot;Trial Complete&quot;)),
NOT (ISPICKVAL(Participant_Study_Enrollment__r.Status__c,&quot;Drop out&quot;))
),
AND (
NOT (ISPICKVAL(Participant_Status__c, &quot;Referral Declined&quot;)),
NOT (ISPICKVAL(Participant_Status__c, &quot;Contact Failed&quot;)),
NOT (ISPICKVAL(Participant_Status__c, &quot;Eligibility Failed&quot;)),
NOT (ISPICKVAL(Participant_Status__c, &quot;Screening Failed&quot;)),
NOT (ISPICKVAL(Participant_Status__c, &quot;Enrollment Failed&quot;)),
NOT (ISPICKVAL(Participant_Status__c, &quot;Failed Review&quot;)),
NOT (ISPICKVAL(Participant_Status__c, &quot;Failed Referral&quot;)),
NOT (ISPICKVAL(Participant_Status__c, &quot;Excluded from Referring&quot;))
),
Clinical_Trial_Profile__r.Include_in_patient_trial_search__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsRequestDataFromSDH</label>
    <type>Checkbox</type>
</CustomField>