force-app/main/default/objects/Participant_Enrollment__c/fields/IVRS_IWRS__c.field-meta.xml
<CustomField>
    <fullName>IVRS_IWRS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Stored at IWRS field</inlineHelpText>
    <label>Screening ID 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>