force-app/main/default/objects/Participant_Enrollment__c/fields/Last_Status_Changed_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Changed_Additional_Notes__c</fullName>
    <label>Last Status Changed Additional Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>