force-app/main/default/objects/Participant_Enrollment__c/fields/Last_Status_Changed_Notes__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Changed_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Status Changed Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>