force-app/main/default/objects/Participant_Enrollment__c/fields/Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status__c</fullName>
    <label>Legal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>