force-app/main/default/objects/Participant_Enrollment__c/fields/Mailing_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State_Code__c</fullName>
    <label>Mailing State Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>