force-app/main/default/objects/Participant_Enrollment__c/fields/Medical_Record_Review_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>Medical_Record_Review_Completed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medical Record Review Completed by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participant Enrollments (Medical Record Review Completed by)</relationshipLabel>
    <relationshipName>Participant_Enrollments</relationshipName>

    <type>Lookup</type>
</CustomField>