force-app/main/default/objects/Participant_Enrollment__c/fields/Medical_Record_Review_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Medical_Record_Review_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Record Review Completed Date</label>

    <type>DateTime</type>
</CustomField>