force-app/main/default/objects/Participant_Enrollment__c/fields/Medical_Record_Review_Completedby_Name__c.field-meta.xml
<CustomField>
    <fullName>Medical_Record_Review_Completedby_Name__c</fullName>
    <description>Medical Record Review Completed by</description>
    <formula>Medical_Record_Review_Completed_by__r.FirstName &amp; &quot; &quot; &amp;  Medical_Record_Review_Completed_by__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Medical Record Review Completed by</inlineHelpText>
    <label>Medical Record Review Completed by</label>
    <type>Text</type>
</CustomField>