force-app/main/default/objects/Participant_Enrollment__c/fields/Medical_Record_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Medical_Record_Review_Status__c</fullName>
    <label>Medical Record Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>