force-app/main/default/objects/Participant_Enrollment__c/fields/Motivational_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Motivational_Message_Id__c</fullName>
    <label>Motivational Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>