force-app/main/default/objects/Participant_Enrollment__c/fields/MRN_Id__c.field-meta.xml
<CustomField>
    <fullName>MRN_Id__c</fullName>
    <label>MRN Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>