force-app/main/default/objects/Participant_Enrollment__c/fields/No_Suitable_Site__c.field-meta.xml
<CustomField>
    <fullName>No_Suitable_Site__c</fullName>
    <inlineHelpText>After the Potential Participant reviews the list of available sites, if they do not like any, then they can select this and it ends the referral process.</inlineHelpText>
    <label>No Suitable Site</label>

    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_Unknown</valueSetName>
    </valueSet>
</CustomField>